syntax = "proto3";

package databaseservice;

option go_package = "/pb";

message IckeyError { // this message generated by goctl, DO NOT EDIT.
  bytes data = 1;
}

message Request {
  string ping = 1;
}

message Response {
  string pong = 1;
}

//测试
message GetPersonReq {
  int32 id = 1;
}
message GetPersonResp {
  int32 id = 1;
  string name = 2;
  int32 phone = 3;
}

//获取Rds实例信息
message GetRdsInstanceReq {
  int32 RegionId = 1;
}

message RdsInstance {
  string DBInstanceId = 1;
  string DBInstanceDescription = 2;
  string Engine = 3;
  string EngineVersion = 4;
  string DBInstanceType = 5;
  string DBInstanceStatus = 6;
  string RegionId = 7;
  string ConnectionString = 8;
}

message GetRdsInstanceResp {
  repeated RdsInstance RdsList = 1;
}

//获取Redis实例信息
message GetRedisInstanceReq {
  int32 RegionId = 1;
}

message RedisInstance {
  string InstanceId = 1;
  string InstanceName = 2;
  string InstanceType = 3;
  string EngineVersion = 4;
  string EditionType = 5;
  string ArchitectureType = 6;
  string NodeType = 7;
  string InstanceStatus = 8;
  string RegionId = 9;
  string ConnectionDomain = 10;
}

message GetRedisInstanceResp {
  repeated RedisInstance RedisList = 1;
}

//获取DMS工单信息
message GetDmsListOrderReq {
  string OrderStatus = 1;
}

message DmsOrder {
  string StatusDesc = 1;
  string Comment = 2;
  string CreateTime = 3;
  string Committer = 4;
  int64 OrderId = 5;
  string LastModifyTime = 6;
  string PluginType = 7;
  int64 CommitterId = 8;
  string StatusCode = 9;
}

message GetDmsListOrderResp {
  repeated DmsOrder DmsOrderList = 1;
}

//获取DMS用户信息
message GetDmsListUsersReq {
  int32 PageNumber = 1;
}

message DmsUserInfo {
  string NickName = 1;
  string UserId = 2;
  string State = 3;
}

message GetDmsListUsersResp {
  repeated DmsUserInfo ListUser = 1;
}

//获取DMS实例信息
message GetDmsListInstanceReq {
  string SearchKey = 1;
  string DbType = 2;
  string EnvType = 3;
  int32 PageNumber = 4;
}

message DmsInstance {
    string InstanceSource = 1;
    string InstanceId = 2;
    string InstanceAlias = 3;
    string InstanceType = 4;
    string Host = 5;
    int32 Port = 6;
    string EnvType = 7;
    string GroupMode = 8;
    string State = 9;
    string EcsRegion = 10;
}

message GetDmsListInstanceResp {
  repeated DmsInstance DmsInstanceList = 1;
}

//获取DMS数据库信息
message GetDmsSearchDatabaseReq {
  string SearchKey = 1;
  string EnvType = 2;
  string DbType = 3;
  int32 PageNumber = 4;
}

message DmsDatabase {
    string SchemaName = 1;
    string DatabaseId = 2;
    string Encoding = 3;
    string DbType = 4;
    string EnvType = 5;
    string Alias = 6;
    string Host = 7;
}

message GetDmsSearchDatabaseResp {
  repeated DmsDatabase SearchDatabase = 1;
}

//获取DBS备份计划信息
message GetDbsBackupPlanReq {
    int32 PageNum = 1;
}

message BackupPlan {
  string BackupPlanId = 1;
  string BackupPlanName = 2;
  string DatabaseType = 3;
  string OSSBucketRegion = 4;
  string BackupMethod = 5;
  string InstanceClass = 6;
  string BackupPlanStatus = 7;
}

message GetDbsBackupPlanResp {
  repeated BackupPlan BackupPlanList = 1;
}

//获取DTS数据同步任务状态
message GetDtsSyncJobNameReq {
  int32 PageNum = 1;
}

message SyncInstance {
  string SyncJobId = 1;
  string SyncJobName = 2;
  string SyncJobClass = 3;
  string Status = 4;
  string Delay = 5;
}

message GetDtsSyncJobNameResp {
  repeated SyncInstance SyncJobList = 1;
}

//获取RDS中慢日志统计
message GetRdsSlowLogReq {
  string DBInstanceId = 1;
  string StartTime = 2;
  string EndTime = 3;
  string DBName = 4;
  int32 PageNumber = 5;
}

message SQLSlowLog {
  string SQLHASH = 1;
  string DBName = 2;
  string SQLText = 3;
  int64 MySQLTotalExecutionCounts = 4;
  int64 MySQLTotalExecutionTimes = 5;
  int64 MaxExecutionTime = 6;
  int64 TotalLockTimes = 7;
  int64 MaxLockTime = 8;
  int64 ParseTotalRowCounts = 9;
  int64 ParseMaxRowCount = 10;
  int64 ReturnTotalRowCounts = 11;
  int64 ReturnMaxRowCount = 12;
}

message GetRdsSlowLogResp {
  int32 TotalRecordCount = 1;
  string DBInstanceId = 2;
  string StartTime = 3;
  string EndTime = 4;
  repeated SQLSlowLog SlowLogList = 5;
  string Engine = 6;
}

//查杀全部会话
message KillAllSessionReq {
  string InstanceId = 1;
}

service DatabaseService {
  rpc Ping(Request) returns(Response);
  rpc GetPerson(GetPersonReq) returns(GetPersonResp);
  rpc GetRdsInstance(GetRdsInstanceReq) returns(GetRdsInstanceResp);
  rpc GetRedisInstance(GetRedisInstanceReq) returns(GetRedisInstanceResp);
  rpc GetDmsListOrder(GetDmsListOrderReq) returns(GetDmsListOrderResp);
  rpc GetDmsListUsers(GetDmsListUsersReq) returns(GetDmsListUsersResp);
  rpc GetDmsListInstance(GetDmsListInstanceReq) returns(GetDmsListInstanceResp);
  rpc GetDmsSearchDatabase(GetDmsSearchDatabaseReq) returns(GetDmsSearchDatabaseResp);
  rpc GetDbsBackupPlan(GetDbsBackupPlanReq) returns(GetDbsBackupPlanResp);
  rpc GetDtsSyncJobName(GetDtsSyncJobNameReq) returns(GetDtsSyncJobNameResp);
  rpc GetRdsSlowLog(GetRdsSlowLogReq) returns(GetRdsSlowLogResp);
  //rpc KillInstanceAllSession() returns();
}
